[workspace]
resolver = "2"
members = [
  "crates/gvm-rools-cli",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.88.0"
license = "AGPL-3.0-or-later"
repository = "https://github.com/clawosiris/gvm-rools"
authors = ["Greenbone AG", "clawosiris"]

[workspace.dependencies]
# CLI
clap = { version = "4.6", features = ["derive", "env"] }
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Underlying library (rust-gvm workspace crates)
gvm-connection = { git = "https://github.com/clawosiris/rust-gvm.git", branch = "main", features = ["ssh"] }
gvm-protocol = { git = "https://github.com/clawosiris/rust-gvm.git", branch = "main" }
gvm-gmp = { git = "https://github.com/clawosiris/rust-gvm.git", branch = "main" }

