[package]
name = "gvm-rools-cli"
description = "Rust reimplementation of gvm-tools gvm-cli built on top of rust-gvm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "gvm-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
gvm-connection.workspace = true
gvm-protocol.workspace = true
gvm-gmp.workspace = true
quick-xml = "0.39"
rpassword = "7"
zeroize = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

# Test server from rust-gvm
# (Used for CLI integration tests; feature enables SSH listener for future tests)
gvm-mock-server = { git = "https://github.com/clawosiris/rust-gvm.git", branch = "main", features = ["ssh"] }
